# pulumi-containerregistry

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.yml  .upgrade-config.yml  Makefile  README.md  devbox.json  renovate.json
.github/: dependabot.yml
.github/actions/download-prerequisites/: action.yml
.github/actions/download-provider/: action.yml
.github/actions/setup-tools/: action.yml
.github/actions/upload-prerequisites/: action.yml
.github/workflows/: build_provider.yml  build_sdk.yml  license.yml  lint.yml  main.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release.yml  resync-build.yml  run-acceptance-tests.yml  test.yml  upgrade-bridge.yml  upgrade-provider.yml  verify-release.yml
deployment-templates/: .goreleaser.yml
examples/: examples_test.go  go.mod  go.sum
provider/: go.mod  go.sum  resources.go
provider/cmd/pulumi-resource-containerregistry/: Pulumi.yaml  bridge-metadata.json  main.go  schema.json
provider/cmd/pulumi-tfgen-containerregistry/: main.go
provider/shim/: go.mod  go.sum  shim.go
sdk/: go.mod  go.sum
sdk/dotnet/: Provider.cs  Pulumi.Containerregistry.csproj  Pulumi.yaml  README.md  Resource.cs  Utilities.cs  pulumi-plugin.json
sdk/go/: Pulumi.yaml
sdk/go/containerregistry/: doc.go  init.go  provider.go  pulumi-plugin.json  pulumiUtilities.go  resource.go
sdk/go/containerregistry/internal/: pulumiUtilities.go
sdk/nodejs/: Pulumi.yaml  README.md  index.ts  package.json  provider.ts  resource.ts  utilities.ts
sdk/nodejs/scripts/: install-pulumi-plugin.js
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_containerregistry/: README.md  __init__.py  _utilities.py  provider.py  pulumi-plugin.json  resource.py
