[project]
  name = "pulumi_containerregistry"
  description = "A Pulumi package for creating and managing containerregistry cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "containerregistry", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com"
    Repository = "https://github.com/rhysmdnz/pulumi-containerregistry"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_containerregistry = ["py.typed", "pulumi-plugin.json"]
